--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "irm-cli",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "A simple CLI for scaffolding common projects.",
   "preferGlobal": true,
   "bin": {
@@ -21,7 +21,7 @@
   "author": "ironmax <ironmax@163.com>",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^1.1.3",
+    "chalk": "1.1.3",
     "commander": "^2.9.0",
     "download-git-repo": "^1.0.0",
     "handlebars": "^4.0.6",
