--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "irm-cli",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A simple CLI for scaffolding common projects.",
   "preferGlobal": true,
   "bin": {
@@ -8,6 +8,10 @@
     "irm-init": "bin/vue-init",
     "irm-list": "bin/vue-list"
   },
+  "files": [
+    "lib",
+    "bin"
+  ],
   "main": "lib/index.js",
   "repository": "git@github.com:ironmaxtory/irm-cli.git",
   "bugs": {
